# rs-tabler

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
python_tests/: test_init.py
src/: errors.rs  lib.rs  settings.rs  table.rs
tabler/: __init__.py  settings.pyi  table.pyi  tabler.pyi  utils.py
