[build-system]
requires = ["maturin>=0.15,<0.16"]
build-backend = "maturin"

[project]
name = "rs-tabler"
requires-python = ">=3.7"
readme = "README.md"
license = { text = "MIT or Apache-2.0" }
keywords = ["table", "text", "formatter"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]
